Add the option to write offsets in bits

--- a/README.org
+++ b/README.org
@@ -24,15 +24,16 @@ To pass arguments to the plugin, use the ~-fplugin-arg-extract_offsets-<argument
 
 The plugin's behavior can be changed with the following arguments:
 
-| Argument   | Default          | Explanation                                                                              |
-|------------+------------------+------------------------------------------------------------------------------------------|
-| separator  | "::"             | Separator for use between the names of structures and fields.                            |
-| attribute  | "extract_offset" | Export only fields with this attribute.                                                  |
-| output     | "/dev/stdout"    | Output file.                                                                             |
-| capitalize | /false/          | Flag indicating whether to capitalize the names of structures and fields or leave as is. |
-| prefix     | /none/           | String to prepend to each entry.                                                         |
-| append     | /false/          | Whether to append output to the output file or overwrite the file.                       |
-| max_length | 256              | The maximum length of a full structure name.                                             |
+| Argument    | Default          | Explanation                                                                              |
+|-------------+------------------+------------------------------------------------------------------------------------------|
+| separator   | "::"             | Separator for use between the names of structures and fields.                            |
+| attribute   | "extract_offset" | Export only fields with this attribute.                                                  |
+| output      | "/dev/stdout"    | Output file.                                                                             |
+| capitalize  | /false/          | Flag indicating whether to capitalize the names of structures and fields or leave as is. |
+| prefix      | /none/           | String to prepend to each entry.                                                         |
+| append      | /false/          | Whether to append output to the output file or overwrite the file.                       |
+| max_length  | 256              | The maximum length of a full structure name.                                             |
+| output_bits | /false/          | Write offsets in bits rather than in bytes.                                              |
 
 
 * Examples:
